# preditiva

./: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt  train_model.py  worker.py
templates/: dashboard.html  index.html  setup.html
